solved limit based results issue
